Fixing layout issue on give page grid

--- a/app/assets/stylesheets/components/_blocks.scss
+++ b/app/assets/stylesheets/components/_blocks.scss
@@ -878,12 +878,12 @@
 
   // Reason blocks
   .reason-blocks {
-    display: block;
+    flex-wrap: wrap;
     .reason-block {
       float: left;
-      width: calc(33.33% - 16.666666667px);
       margin-left: 25px;
       margin-bottom: 25px;
+      width: calc(33.33% - 16.666666667px);
       &:nth-child(3n+1) {
         margin-left: 0;
       }
